# ZK-SNARK_Rust

./: Cargo.toml  README.md  rustfmt.toml
circuit/: Cargo.toml
circuit/macro/: Cargo.toml
circuit/macro/src/: lib.rs
circuit/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
prover/: Cargo.toml
prover/circuit_macro/: Cargo.toml
prover/circuit_macro/src/: lib.rs
prover/src/: circuit.rs  lib.rs  main.rs  qap.rs  r1cs.rs
prover/src/r1cs/: normalization.rs
prover/src/r1cs/normalization/: brackets_reveal.rs  left_right.rs  packing.rs  term.rs
trusted_setup/: Cargo.toml
trusted_setup/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
