[workspace]
resolver = "2"
members = [
    "prover",
    "verifier",
    "trusted_setup",
    "circuit",
    "protocol",
    "network",
    "logger",
]

[workspace.dependencies]
circuit = { path = "circuit" }
network = { path = "network" }
protocol = { path = "protocol" }
logger = { path = "logger" }

tokio = { version = "1.45", features = ["rt-multi-thread"] }
futures = "0.3.31"
serde = "1.0.219"
eyre = "0.6.12"
test-log = { version = "0.2.17", features = ["trace"] }
ff = "0.13.1"
bls12_381 = "0.8.0"
