[package]
name = "prover"
version = "0.1.0"
edition = "2024"

[dependencies]
circuit.workspace = true
network.workspace = true
protocol.workspace = true
logger.workspace = true

tokio.workspace = true
eyre.workspace = true
indexmap.workspace = true
bls12_381.workspace = true
ff.workspace = true
ndarray = "0.16.1"
ahash = "0.8.12"
sorted-vec = "0.8.6"

[dev-dependencies]
regex = "1.11.1"
